UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/WS_ESB_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ESB Service Settings</label>
</CustomObject>