UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/Address_Resource_Management__c.field-meta.xml
<CustomField>
    <fullName>Address_Resource_Management__c</fullName>
    <description>Apigee endpoint for Address Resourcemanagement service</description>
    <label>Address Resource Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>