UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/Apigee_Token__c.field-meta.xml
<CustomField>
    <fullName>Apigee_Token__c</fullName>
    <label>Apigee Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>