UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/CBTS_API_Key__c.field-meta.xml
<CustomField>
    <fullName>CBTS_API_Key__c</fullName>
    <label>CBTS API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>