UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/CBTS_Order_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CBTS_Order_Endpoint__c</fullName>
    <label>CBTS Order Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>