UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/CVD_GetPNums_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CVD_GetPNums_Endpoint__c</fullName>
    <description>CVD Get PNUMs for the whole sale app</description>
    <label>CVD GetPNums Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>