UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/CVD_GetRates_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CVD_GetRates_Endpoint__c</fullName>
    <description>CVD Get Rates End point for the Wholesale app</description>
    <label>CVD GetRates Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>