UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/EC_ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>EC_ApplicationID__c</fullName>
    <description>Execution Context - Application ID</description>
    <inlineHelpText>Execution Context - Application ID</inlineHelpText>
    <label>Application ID</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>