UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/EC_EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EC_EmployeeID__c</fullName>
    <description>Execution Context - Employee ID</description>
    <inlineHelpText>Execution Context - Employee ID</inlineHelpText>
    <label>Employee ID</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>