UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/EC_UserID__c.field-meta.xml
<CustomField>
    <fullName>EC_UserID__c</fullName>
    <description>Execution Context - User ID</description>
    <inlineHelpText>Execution Context - User ID</inlineHelpText>
    <label>User ID</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>