UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/HDR_Authorization__c.field-meta.xml
<CustomField>
    <fullName>HDR_Authorization__c</fullName>
    <label>Authorization Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>