UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/Serviceability_URI__c.field-meta.xml
<CustomField>
    <fullName>Serviceability_URI__c</fullName>
    <label>Serviceability URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>