UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/TO_WebServiceLimit__c.field-meta.xml
<CustomField>
    <fullName>TO_WebServiceLimit__c</fullName>
    <label>TO_WebServiceLimit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>