UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/URI_CustomerInformationInquiry__c.field-meta.xml
<CustomField>
    <fullName>URI_CustomerInformationInquiry__c</fullName>
    <label>CustomerInformationInquiry URl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>