UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/URI_ManageAccount__c.field-meta.xml
<CustomField>
    <fullName>URI_ManageAccount__c</fullName>
    <label>ManageAccount URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>