UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/URI_ManageCollection__c.field-meta.xml
<CustomField>
    <fullName>URI_ManageCollection__c</fullName>
    <label>ManageCollection URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>