UCF-APR2.4/ftr main/force-app/main/default/objects/WS_ESB_Settings__c/fields/URI_QuoteToOrder__c.field-meta.xml
<CustomField>
    <fullName>URI_QuoteToOrder__c</fullName>
    <label>QuoteToOrder URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>